# Judge_0

./: .dockerignore  .env.example  .gitignore  A_1000u_pipe100.xlsx  A_1000u_spike.xlsx  A_100u_flat.json  A_100u_flat.xlsx  B_1000u_pipe50.xlsx  B_1000u_ramp20.xlsx  C_1000u_pipe50.xlsx  C_1000u_spike.xlsx  D_1000u_ramp20.xlsx  D_500u_ramp10.xlsx  Dockerfile  E_1000u_ramp20.xlsx  E_1000u_spike.xlsx  IO_Type_Detection_Spec.docx  Judge0_Harness_Architecture.pptx  README.md  __init__.py  api.py  autograder.py  cleanup.sh  collect_ec2_metrics.py  cpp_harness.cpp  deploy-ec2.sh  docker-compose.ec2.w3mr3.yml  docker-compose.ec2.w4mr2.yml  docker-compose.ec2.w4mr3.yml  docker-compose.ec2.w5mr2.yml  docker-compose.ec2.yml  docker-compose.yml  full_conversation.txt  generate_cumulative_report.py  generate_ec2_report.py  go.mod  harness_builder.py  judge0.conf  judge0.ec2.conf  judge0.ec2.mr3.conf  (+48 more)
.claude/: settings.json
Reports/: A_1000u_pipe100.xlsx  A_1000u_pipe50.xlsx  A_1000u_ramp20.xlsx  A_1000u_spike.xlsx  A_100u_flat.xlsx  A_500u_ramp10.xlsx  B_1000u_pipe50.xlsx  B_1000u_ramp20.xlsx  B_1000u_spike.xlsx  C_1000u_pipe50.xlsx  C_1000u_ramp20.xlsx  C_1000u_spike.xlsx  D_1000u_ramp20.xlsx  D_500u_ramp10.xlsx  E_1000u_pipe50.xlsx  E_1000u_ramp20.xlsx  E_1000u_spike.xlsx  cumulative_report.xlsx
Reports_backup_20260528_033003/: A_1000u_ramp20.xlsx  A_100u_flat.xlsx  A_500u_ramp10.xlsx  B_1000u_pipe50.xlsx  B_1000u_spike.xlsx  C_1000u_pipe50.xlsx  D_1000u_ramp20.xlsx  D_500u_ramp10.xlsx  E_1000u_pipe50.xlsx  E_1000u_spike.xlsx
batch_reports/: load_test_batch_010.json  load_test_batch_020.json  (+18 more)
core/: log.py  (+4 more)
(+63 files in other folders)
