[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "judge0-autograder"
version = "0.1.0"
description = "Judge0-backed autograder with parallel harness execution"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
]

[tool.setuptools.packages.find]
# Picks up: core/, security/, and the root package (autograder.py + __init__.py)
where = ["."]
include = ["core*", "security*", "judge0_autograder*"]

[tool.setuptools]
py-modules = ["autograder"]

# Include harness template files so they ship with the installed package
[tool.setuptools.package-data]
"*" = [
    "harnesses/*.py",
    "harnesses/*.c",
    "harnesses/*.cpp",
    "harnesses/*.java",
]
